--- a/app/assets/stylesheets/lib/_colours.scss
+++ b/app/assets/stylesheets/lib/_colours.scss
@@ -2,7 +2,9 @@
 $color-alto: #ddd;
 $color-black: #000;
 $color-feijoa: #8fdf82;
+$color-green: #0c0;
 $color-givry: #f7f2c3;
+$color-guardsman-red: #c00;
 $color-roman: #d9534f;
 $color-silver: #ccc;
 $color-white: #fff;
