--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -7,33 +7,63 @@
   <h1>Generate a report</h1>
 </div>
 
-<%= form_for @report, method: 'GET', target: '_blank', 'data-disable-with': nil, layout: :basic do |f| %>
-  <%=
-    f.select(
-      :where,
-      options_for_select(@where_options),
-      {},
-      class: 't-where',
-      data: { module: 'advanced-select' }
-    )
-  %>
-  <%=
-    f.text_field(
-      :date_range,
-      class: 't-is-within',
-      label: 'Is within',
-      data: {
-        module: 'date-range-picker',
-        config: {
-          autoUpdateInput: false,
-          locale: {
-            cancelLabel: 'Clear',
-            format: 'DD/MM/YYYY'
+<%= panel heading: 'Generate an appointment report' do %>
+  <div class='panel-body t-appointment-report'>
+    <%= form_for @appointment_report, method: 'GET', target: '_blank', 'data-disable-with': nil, layout: :basic do |f| %>
+      <%=
+        f.select(
+          :where,
+          options_for_select(@where_options),
+          {},
+          class: 't-where',
+          data: { module: 'advanced-select' }
+        )
+      %>
+      <%=
+        f.text_field(
+          :date_range,
+          class: 't-is-within',
+          label: 'Is within',
+          data: {
+            module: 'date-range-picker',
+            config: {
+              autoUpdateInput: false,
+              locale: {
+                cancelLabel: 'Clear',
+                format: 'DD/MM/YYYY'
+              }
+            }
           }
-        }
-      }
-    )
-  %>
-  <% # Use manual html here so that data-disable-with isn't added. %>
-  <input type="submit" name="commit" value="Download" class="t-download btn btn-primary">
+        )
+      %>
+      <% # Use manual html here so that data-disable-with isn't added. %>
+      <input type="submit" name="commit" value="Download" class="t-download btn btn-primary">
+    <% end %>
+  </div>
+<% end %>
+
+<%= panel heading: 'Generate a utilisation report' do %>
+  <div class='panel-body t-utilisation-report'>
+    <%= form_for @utilisation_report, method: 'GET', target: '_blank', 'data-disable-with': nil, layout: :basic do |f| %>
+      <%=
+        f.text_field(
+          :date_range,
+          class: 't-is-within',
+          label: 'Is within',
+          data: {
+            module: 'date-range-picker',
+            config: {
+              autoUpdateInput: false,
+              locale: {
+                cancelLabel: 'Clear',
+                format: 'DD/MM/YYYY'
+              }
+            }
+          }
+        )
+      %>
+      <% # Use manual html here so that data-disable-with isn't added. %>
+      <input type="submit" name="commit" value="Download" class="t-download btn btn-primary">
+    <% end %>
+  </div>
 <% end %>
