Rewritten JS modules to use GOVUK Admin template module loader
- every module uses TapBase class which deals with setting up config
- all modules can now load config from a cookie
- figured out a way to trigger an event drop in fullcalendar
  without needing to access the instance of the module
  (which we no longer have access to now that we are using
  GOVUK Admin template module loader)

--- a/app/views/activities/_activity_feed.html.erb
+++ b/app/views/activities/_activity_feed.html.erb
@@ -17,7 +17,7 @@
         <% end %>
       </div>
       <ul class="activity-feed__list"
-        data-module='ActivityFeedPoller'
+        data-module='activity-feed-poller'
         data-interval="<%= poll_interval_milliseconds %>"
         data-url="<%= appointment_activities_path(appointment) %>">
         <%= render appointment.activities.first if appointment.activities.present? %>
