--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -15,7 +15,7 @@
           :date_range,
           class: 't-date-range',
           data: {
-            module: 'DateRangePicker',
+            module: 'date-range-picker',
             config: {
               autoUpdateInput: false,
               locale: {
