--- a/app/views/holidays/new.html.erb
+++ b/app/views/holidays/new.html.erb
@@ -15,7 +15,7 @@
       :date_range,
       class: 't-date-range',
       data: {
-        module: 'DateRangePicker',
+        module: 'date-range-picker',
         config: {
           timePicker: true,
           timePickerIncrement: 5,
@@ -33,7 +33,7 @@
       {},
       multiple: 'multiple',
       class: 't-users',
-      data: { module: 'AdvancedSelect' },
+      data: { module: 'advanced-select' },
     )
   %>
   <%= f.submit 'Save', class: 't-save' %>
