--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -14,7 +14,7 @@
       options_for_select(@where_options),
       {},
       class: 't-where',
-      data: { module: 'AdvancedSelect' }
+      data: { module: 'advanced-select' }
     )
   %>
   <%=
@@ -23,7 +23,7 @@
       class: 't-is-within',
       label: 'Is within',
       data: {
-        module: 'DateRangePicker',
+        module: 'date-range-picker',
         config: {
           autoUpdateInput: false,
           locale: {
