--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,7 +23,7 @@
 </div>
 
 <% if @schedules.any? %>
-  <div class="guider-schedules" data-module="GuiderSchedulesChart" data-config='{"guiderScheduleDataSourceElementId": "guider-schedules"}' aria-hidden="true">
+  <div class="guider-schedules" data-module="guider-schedules-chart" data-config='{"guiderScheduleDataSourceElementId": "guider-schedules"}' aria-hidden="true">
     <div class="row">
       <div class="col-xs-12">
         <div class="guider-schedules__months"></div>
