--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -17,7 +17,7 @@
 <div
   id="HolidaysCalendar"
   class="holiday-calendar"
-  data-module="HolidaysCalendar"
+  data-module="holidays-calendar"
   data-holidays-path="<%= merged_holidays_path %>"
   data-new-holiday-path="<%= new_holiday_path %>"
   data-default-date="<%= Time.zone.now %>"
