--- a/app/views/shared/_date_of_birth_form_field.html.erb
+++ b/app/views/shared/_date_of_birth_form_field.html.erb
@@ -1,6 +1,6 @@
 <% start_year = 120.years.ago %>
 
-<div class="form-dob" data-module="CustomerAge" data-output-id="js-customer-age">
+<div class="form-dob" data-module="customer-age" data-output-id="js-customer-age">
   <%= field_with_errors_wrapper(form, :date_of_birth) do %>
     <label>
       <span class="sr-only">Date of birth</span> <%= required_label(:day) %>
