Tighten up breadcrumbs and headings on all pages
Moves the breadcrumbs and h1's out of the `page-header`, which
buys us quite a bit more vertical spacing.

--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -1,9 +1,9 @@
-<div class="page-header">
-  <ol class="breadcrumb">
-    <li><a href="<%= root_path %>">Home</a></li>
-    <li class="active">Appointments</li>
-  </ol>
-</div>
+<ol class="breadcrumb">
+  <li><a href="<%= root_path %>">Home</a></li>
+  <li class="active">Appointments</li>
+</ol>
+
+<h1 class="sr-only">Appointments</h1>
 
 <div
   id="GuidersAppointmentsCalendar"
