--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -30,15 +30,15 @@
   </div>
 </div>
 
-<table id="results" class="table table-striped table-bordered table-hover" data-module="SortableList" data-config='{"valueNames": ["id", "created", "first_name", "last_name", "appointment_date", "status"]}' data-default-order='{"value": "created", "order": "desc"}'>
+<table id="results" class="table table-striped table-bordered table-hover">
   <thead>
     <tr>
-      <th><span class="sort" data-sort="id">Reference</span></th>
-      <th><span class="sort" data-sort="created">Created</span></th>
-      <th><span class="sort" data-sort="first_name">First Name</span></th>
-      <th><span class="sort" data-sort="last_name">Last Name</span></th>
-      <th><span class="sort" data-sort="appointment_date">Appointment Date/Time</span></th>
-      <th><span class="sort" data-sort="status">Status</span></th>
+      <th>Reference</th>
+      <th>Created</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Appointment Date/Time</th>
+      <th>Status</th>
       <th width="1%">Actions</th>
     </tr>
   </thead>
@@ -47,11 +47,11 @@
       <% result = AppointmentPresenter.new(result) %>
       <tr class='t-result'>
         <td class='t-id'><span class="id"><%= result.id %></span></td>
-        <td><span class="created"><%= result.created_at %></span></td>
-        <td><span class="first_name"><%= result.first_name %></span></td>
-        <td><span class="last_name"><%= result.last_name %></span></td>
-        <td><span class="appointment_date"><%= result.date %></span></td>
-        <td><span class="status"><%= result.status %></span></td>
+        <td><%= result.created_at %></td>
+        <td><%= result.first_name %></td>
+        <td><%= result.last_name %></td>
+        <td><%= result.date %></td>
+        <td><%= result.status %></td>
         <td nowrap="true">
           <%= link_to edit_appointment_path(result), title: 'Edit appointment', class: 'btn btn-info' do %>
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
