--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -43,10 +43,10 @@
   <tbody class="list">
     <% @results.each do |result| %>
       <% result = AppointmentPresenter.new(result) %>
-      <tr class='t-result'>
-        <td class='t-id'><span class="id">#<%= result.id %></span></td>
+      <tr class="t-result">
+        <td class="t-id"><span class="id">#<%= result.id %></span></td>
         <td><%= result.created_at %></td>
-        <td><%= result.first_name %></td>
+        <td class="t-first-name"><%= result.first_name %></td>
         <td><%= result.last_name %></td>
         <td><%= result.guider_name %></td>
         <td><%= result.date %></td>
