--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,47 +5,7 @@
 <% end %>
 
 <% content_for :navbar_items do %>
-  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Appointments <span class="caret"></span></a>
-    <ul class="dropdown-menu">
-      <%= active_link_to 'Search', search_appointments_path, wrap_tag: :li %>
-      <%= active_link_to 'Book appointment', new_appointment_path, wrap_tag: :li %>
-
-      <% if current_user.resource_manager? %>
-        <%= active_link_to 'Allocations', allocations_path, wrap_tag: :li %>
-      <% end %>
-
-      <% if current_user.guider? %>
-        <%= active_link_to 'My appointments', my_appointments_path, wrap_tag: :li %>
-        <%= active_link_to 'Company appointments', company_calendar_path, wrap_tag: :li %>
-      <% end %>
-    </ul>
-  </li>
-
-  <% if current_user.guider? %>
-    <%= active_link_to 'My activity', activities_path, wrap_tag: :li %>
-  <% end %>
-
-  <% if current_user.resource_manager? %>
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Guiders <span class="caret"></span></a>
-      <ul class="dropdown-menu">
-        <%= active_link_to 'Groups & schedules', users_path, wrap_tag: :li, active: :exclusive %>
-        <%= active_link_to 'Holidays & unavailability', holidays_path, wrap_tag: :li %>
-        <%= active_link_to 'Display order', sort_users_path, wrap_tag: :li %>
-      </ul>
-    </li>
-  <% end %>
-
-  <% if current_user.resource_manager? || current_user.contact_centre_team_leader? %>
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
-      <ul class="dropdown-menu">
-        <%= active_link_to 'Appointment report', new_appointment_report_path, wrap_tag: :li %>
-        <%= active_link_to 'Utilisation report', new_utilisation_report_path, wrap_tag: :li %>
-      </ul>
-    </li>
-  <% end %>
+  <% render 'shared/navigation' %>
 <% end %>
 
 <% content_for :body_end do %>
