--- a/app/views/appointment_mailer/confirmation.text.erb
+++ b/app/views/appointment_mailer/confirmation.text.erb
@@ -1,27 +1,47 @@
-Dear <%= @appointment.name %>,
+You've successfully booked an appointment
 
-Thank you for booking an appointment with Pension Wise. We can confirm your
-appointment will be at <%= @appointment.start_at.to_s(:govuk_date) %>. The
-appointment will be with <%= @appointment.guider.name %>.
+Dear <%= @appointment.first_name %>,
 
-Preparing for your appointment
+Thank you for booking a telephone guidance appointment with Pension Wise.
+Your appointment is confirmed for:
 
-To make your appointment as useful as possible, it would be helpful to know the
-following information:
+Date
+<%= @appointment.start_at.to_s(:govuk_date) %>
 
-* the value of your pension pot(s) - check your pension paperwork or ask your
-  provider
-* an estimate of your State Pension - call the Future Pension Centre on
-  0345 600 4274 for a State Pension statement
-* any special arrangements attached to your pension pot, eg a guaranteed
-  annuity rate or a guaranteed pot value at a certain time - ask your provider
+  Start time
+    <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
 
-Think about your financial circumstances in general and plans for retirement,
-eg:
+  Appointment lasts
+    45 minutes
 
-* sources of income like salary, benefits, savings, investments
-* debts and repayments you might have
-* when you want to stop working
-* if you want a fixed or flexible income in retirement
+  Your contact number
+    <%= @appointment.phone %>
 
-You may be asked for your booking reference number, #<%= @appointment.id %>.
+  Your memorable word
+    <%= @appointment.memorable_word(obscure: true) %>
+
+  Your reference number
+    #<%= @appointment.id %>
+
+  A trained guidance specialist will call you on the number above. They'll repeat the
+  memorable word to you so you know you're speaking to Pension Wise.
+
+    If you don't answer the call, you'll need to book another appointment.
+
+  To cancel or change your appointment, or if any of the information above isn't correct,
+  call 0800 138 3944 or reply to this email.
+
+  Preparing for your appointment
+
+To make your appointment as useful as possible, it would be helpful to know the following information:
+
+  - the value of your pension pot(s) - check your pension paperwork or ask your provider
+  - an estimate of your State Pension - call the Future Pension Centre on 0345 600 4274 for a State Pension statement
+  - any special arrangements attached to your pension pot, eg a guaranteed annuity rate or a guaranteed pot value at a certain time - ask your provider
+
+Think about your financial circumstances in general and plans for retirement, eg:
+
+- sources of income like salary, benefits, savings, investments
+- debts and repayments you might have
+- when you want to stop working
+- if you want a fixed or flexible income in retirement
