--- a/app/assets/stylesheets/lib/_colours.scss
+++ b/app/assets/stylesheets/lib/_colours.scss
@@ -1,6 +1,7 @@
 // Names from http://chir.ag/projects/name-that-color/
 $color-alto: #ddd;
 $color-black: #000;
+$color-medium-carmine: #ad3b3b;
 $color-boston-blue: #3a87ad;
 $color-feijoa: #8fdf82;
 $color-gallery: #ebebeb;
@@ -8,7 +9,6 @@ $color-givry: #f7f2c3;
 $color-green: #0c0;
 $color-guardsman-red: #c00;
 $color-madang: #c6f5c6;
-$color-muddy-waters: #bf886e;
 $color-roman: #d9534f;
 $color-silver: #ccc;
 $color-white: #fff;
