Refine allocation / assignment messages
The way these messages were worded prior to this change implied the
assignment was a user-driven activity. This is incorrect since
allocation is randomised and assigned via the system.

In the case of reassignment we now display richer text describing which
resource manager made the selection and which guider was selected.

--- a/app/views/activities/_assignment_activity.html.erb
+++ b/app/views/activities/_assignment_activity.html.erb
@@ -1,4 +1,4 @@
 <% content_for(:activity_message, flush: true) do %>
-  <%= assignment_activity.message %> to <%= assignment_activity.owner.name %>
+  <%= assignment_activity.message %>
 <% end %>
 <%= render 'activities/activity', activity: assignment_activity, details: details %>
