--- a/app/views/company_calendars/show.html.erb
+++ b/app/views/company_calendars/show.html.erb
@@ -7,7 +7,7 @@
 
   <div
     id="CompanyCalendar"
-    class="company-calendar js-calendar t-calendar"
+    class="company-calendar js-calendar js-calendar-reload-on-events t-calendar"
     data-module="company-calendar"
     data-default-date="<%= Time.zone.now %>"
     data-filter-select-id="filter_guiders">
