--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -34,7 +34,8 @@
   </div>
 <% end %>
 
-<table id="results" class="table table-striped table-bordered table-hover">
+<table id="results" class="appointment-search-results table table-striped table-bordered table-hover">
+  <caption><span class="sr-only">Appointment search results</span></caption>
   <thead>
     <tr>
       <th>Reference</th>
