Improve layout of review of new appointment
- Combined certain fields so that it reads better when
  an agent is reading back details to a customer
- Make page shorter
- Improve copy (Preview -> Review)

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -18,7 +18,7 @@
   <%= render partial: 'personal_details_form', locals: { f: f } %>
   <div class="row form-group">
     <div class="col-md-12">
-      <%= f.submit "Preview appointment", class: 't-preview-appointment' %>
+      <%= f.submit "Continue", class: 't-preview-appointment' %>
     </div>
   </div>
 <% end %>
